# Logger

./: CMakeLists.txt  main.cpp
app/: CMakeLists.txt  main.cpp
include/: Logger.h  LoggerStream.h  MessageFormat.h
include/LoggerStrategy/: FileLoggerStrategy.h  LoggerStrategy.h  SocketLoggerStrategy.h
src/: CMakeLists.txt  Logger.cpp  LoggerStream.cpp  MessageFormat.cpp  main.cpp
src/LoggerStrategy/: FileLoggerStrategy.cpp  LoggerStrategy.cpp  SocketLoggerStrategy.cpp
statistics/: CMakeLists.txt  Receiver.cpp  Receiver.h  Statistics.cpp  Statistics.h  main.cpp
